# src/main/java/com/startup/demenage/entity/OffreEntity.java
@@ -16,7 +16,32 @@ public class OffreEntity {
     private double prix;
     private String author;
     private String annonceId;
+    private String date;
+    private boolean deleted = false;
+    private String deletedAt;
     
+    public boolean isDeleted() {
+        return deleted;
+    }
+
+    public void setDeleted(boolean deleted) {
+        this.deleted = deleted;
+    }
+
+    public String getDeletedAt() {
+        return deletedAt;
+    }
+
+    public void setDeletedAt(String deletedAt) {
+        this.deletedAt = deletedAt;
+    }
+    
+    public String getDate() {
+        return date;
+    }
+    public void setDate(String date) {
+        this.date = date;
+    }
     private String status;
     private LocalDateTime createdAt;
     
