# src/main/java/com/startup/demenage/entity/UserEntity.java
@@ -1,0 +1,132 @@
+package com.startup.demenage.entity;
+
+import java.time.LocalDateTime;
+import java.util.List;
+import java.util.UUID;
+
+import jakarta.persistence.Entity;
+import jakarta.persistence.EnumType;
+import jakarta.persistence.Enumerated;
+import jakarta.persistence.Id;
+import jakarta.persistence.OneToMany;
+import jakarta.persistence.Table;
+
+@Entity
+@Table(name = "Author")
+public class UserEntity {
+    @Id
+    private String id = UUID.randomUUID().toString();
+    private String firstname;
+    private String lastname;
+    private String username;
+    private String password;
+    private String status;
+    private String image;
+    private String createdAt;
+    private boolean deleted = false;
+    private String deletedAt;
+    
+    public boolean isDeleted() {
+        return deleted;
+    }
+
+    public void setDeleted(boolean deleted) {
+        this.deleted = deleted;
+    }
+
+    public String getDeletedAt() {
+        return deletedAt;
+    }
+
+    public void setDeletedAt(String deletedAt) {
+        this.deletedAt = deletedAt;
+    }
+    @Enumerated(EnumType.STRING)
+    private RoleEnum role = RoleEnum.CUSTOMER;
+    @OneToMany(orphanRemoval = true, mappedBy = "user")
+    private List<UserTokenEntity> token;
+
+    public UserEntity() {
+        this.createdAt = LocalDateTime.now().toString();
+    }
+
+    public String getId() {
+        return id;
+    }
+
+    public void setId(String id) {
+        this.id = id;
+    }
+
+    public String getFirstname() {
+        return firstname;
+    }
+
+    public void setFirstname(String firstname) {
+        this.firstname = firstname;
+    }
+
+    public String getLastname() {
+        return lastname;
+    }
+
+    public void setLastname(String lastname) {
+        this.lastname = lastname;
+    }
+
+    public String getUsername() {
+        return username;
+    }
+
+    public void setUsername(String username) {
+        this.username = username;
+    }
+
+    public String getPassword() {
+        return password;
+    }
+
+    public void setPassword(String password) {
+        this.password = password;
+    }
+
+    public String getStatus() {
+        return status;
+    }
+
+    public void setStatus(String status) {
+        this.status = status;
+    }
+
+    public String getImage() {
+        return image;
+    }
+
+    public void setImage(String image) {
+        this.image = image;
+    }
+
+    public String getCreatedAt() {
+        return createdAt;
+    }
+
+    public void setCreatedAt(String createdAt) {
+        this.createdAt = createdAt;
+    }
+
+    public RoleEnum getRole() {
+        return role;
+    }
+
+    public void setRole(RoleEnum role) {
+        this.role = role;
+    }
+
+    public List<UserTokenEntity> getToken() {
+        return token;
+    }
+
+    public void setToken(List<UserTokenEntity> token) {
+        this.token = token;
+    }
+}
