# src/main/resources/api/openapi.yaml
@@ -7,6 +7,7 @@ info:
 tags:
   - name: Annonce
   - name: Offre
+  - name: User
 paths:
   /api/v1/annonces:
     post:
@@ -60,6 +61,11 @@ paths:
           schema:
             type: integer
             default: 10
+        - name: byAdmin
+          in: query
+          required: false
+          schema:
+            type: string
       responses:
         200:
           description: get successfully
@@ -76,6 +82,11 @@ paths:
         - name: id
           required: true
           in: path
+          schema:
+            type: string
+        - name: byAdmin
+          in: query
+          required: false
           schema:
             type: string
       responses:
@@ -95,6 +106,11 @@ paths:
         - name: id
           in: path
           required: true
+          schema:
+            type: string
+        - name: byAdmin
+          in: query
+          required: false
           schema:
             type: string
       requestBody:
@@ -119,6 +135,11 @@ paths:
         - name: id
           in: path
           required: true
+          schema:
+            type: string
+        - name: byAdmin
+          in: query
+          required: false
           schema:
             type: string
       responses:
@@ -174,6 +195,11 @@ paths:
           schema:
             type: integer
             default: 10
+        - name: byAdmin
+          in: query
+          required: false
+          schema:
+            type: string
       responses:
         200: 
           description: get successfully
@@ -190,6 +216,11 @@ paths:
         - name: id
           in: path
           required: true
+          schema:
+            type: string
+        - name: byAdmin
+          in: query
+          required: false
           schema:
             type: string
       responses:
@@ -211,6 +242,11 @@ paths:
           required: true
           schema:
             type: string
+        - name: byAdmin
+          in: query
+          required: false
+          schema:
+            type: string
       responses:
         200:
           description: updated successfully
@@ -230,12 +266,170 @@ paths:
           required: true
           schema:
             type: string
+        - name: byAdmin
+          in: query
+          required: false
+          schema:
+            type: string
       responses:
         200:
           description: offer deleted
         400:
           description: error when deleting an offer
 
+  /api/v1/users:
+    post:
+      tags:
+        - User
+      summary: Signup the a new customer (user)
+      description: Creates a new customer (user)
+      operationId: signUp
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/User'
+      responses:
+        201:
+          description: For successful user creation.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SignedInUser'
+    get:
+      tags:
+        - User
+      summary: get user by email
+      description: get user by email
+      operationId: getUserbyEmailOrId
+      parameters:
+        - name: email
+          in: query
+          schema:
+            type: string
+            default: ""
+        - name: user_id
+          in: query
+          schema:
+            type: string
+            default: ""
+        - name: byAdmin
+          in: query
+          required: false
+          schema:
+            type: string
+      responses:
+        200:
+          description: get successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+    put:
+      tags:
+        - User
+      summary: update an user
+      description: update an user
+      operationId: updateUser
+      parameters:
+        - name: email
+          in: query
+          schema:
+            type: string
+            default: ""
+        - name: byAdmin
+          in: query
+          required: false
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/User"
+      responses:
+        200:
+          description: update successfully
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        400:
+          description: error when updating
+    delete:
+      tags:
+        - User
+      summary: delete an user
+      description: delete an user
+      operationId: deleteUser
+      parameters:
+        - name: email
+          in: query
+          schema:
+            type: string
+            default: ""
+        - name: byAdmin
+          in: query
+          required: false
+          schema:
+            type: string
+      responses:
+        200:
+          description: delete successfully
+        400:
+          description: error when deleting
+  /api/v1/auth/token:
+    post:
+      tags:
+        - User
+      summary: Signin the customer (user)
+      description: Generates the JWT and refresh token
+      operationId: signIn
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SignInReq'
+      responses:
+        200:
+          description: Returns the access and refresh token.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SignedInUser'
+    delete:
+      tags:
+        - User
+      summary: Signouts the customer (user)
+      description: Signouts the customer (user).
+      operationId: signOut
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RefreshToken'
+      responses:
+        202:
+          description: Accepts the request for logout.
+  /api/v1/auth/token/refresh:
+    post:
+      tags:
+        - User
+      summary: Provides new JWT based on valid refresh token.
+      description: Provides JWT based on valid refresh token.
+      operationId: getAccessToken
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RefreshToken'
+      responses:
+        200:
+          description: For successful operation.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/SignedInUser'
 
 components:
   schemas:
@@ -269,6 +463,12 @@ components:
         offres:
           type: number
           default: number
+        date:
+          type: string
+        deleted:
+          type: boolean
+        deletedAt:
+          type: string
 
     Adresse:
       type: object
@@ -279,7 +479,11 @@ components:
           type: string
         zipCode:
           type: string
-    
+        deleted:
+          type: boolean
+        deletedAt:
+          type: string
+        
     Offre:
       type: object
       properties:
@@ -300,3 +504,69 @@ components:
             - REFUSED
             - ACCEPTED
             - PENDING
+        date:
+          type: string
+        deleted:
+          type: boolean
+        deletedAt:
+          type: string
+    SignedInUser:
+      description: Signed-in user information
+      type: object
+      properties:
+        refreshToken:
+          description: Refresh Token
+          type: string
+        accessToken:
+          description: JWT Token aka access token
+          type: string
+        username:
+          description: User Name
+          type: string
+        userId:
+          description: User Identifier
+          type: string
+        role:
+          type: string
+    
+    SignInReq:
+      description: Request body for Sign-in
+      type: object
+      properties:
+        username:
+          description: username of the User
+          type: string
+        password:
+          description: password of the User
+          type: string
+
+    RefreshToken:
+      description: Contains the refresh token
+      type: object
+      properties:
+        refreshToken:
+          description: Refresh Token
+          type: string
+    User:
+      type: object
+      properties:
+        id:
+          type: string
+        username:
+          type: string
+        firstname:
+          type: string
+        lastname:
+          type: string
+        password:
+          type: string
+        phone:
+          type: string
+        role:
+          type: string
+        emailValidated:
+          type: boolean
+        deleted:
+          type: boolean
+        deletedAt:
+          type: string
